Copied content from original blog.  Media components added.

--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,10 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# Storybook
 *storybook.log
 storybook-static
+
+# Working directories
+/_jekyll_content
+/_ignore
