--- a/package.json
+++ b/package.json
@@ -11,13 +11,7 @@
     "build-storybook": "storybook build",
     "create-post": "ts-node --project scripts/tsconfig.json scripts/create-post.ts",
     "import-jekyll-posts": "ts-node --project scripts/tsconfig.json scripts/import-jekyll-posts.ts",
-    "build-debug": "node scripts/build-debug.js",
-    "download-images": "ts-node --project scripts/tsconfig.json scripts/download-featured-images.ts",
-    "preview-images": "ts-node --project scripts/tsconfig.json scripts/preview-external-images.ts",
-    "replace-default-images": "ts-node --project scripts/tsconfig.json scripts/replace-default-images.ts",
-    "convert-html": "ts-node --project scripts/tsconfig.json scripts/convert-html-to-markdown.ts",
-    "preview-html": "ts-node --project scripts/tsconfig.json scripts/preview-html-conversion.ts",
-    "convert-jekyll-links": "ts-node --project scripts/tsconfig.json scripts/convert-jekyll-links.ts"
+    "replace-default-images": "ts-node --project scripts/tsconfig.json scripts/replace-default-images.ts"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
