--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/react": "^3.1.0",
     "@types/mdx": "^2.0.13",
     "gray-matter": "^4.0.3",
+    "globby": "^14.0.0",
     "next": "15.4.6",
     "next-mdx-remote": "^5.0.0",
     "react": "19.1.0",
