--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run generate-search-index && next build",
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "generate-search-index": "ts-node --project scripts/tsconfig.json scripts/generate-search-index.ts",
     "create-post": "ts-node --project scripts/tsconfig.json scripts/create-post.ts",
     "import-jekyll-posts": "ts-node --project scripts/tsconfig.json scripts/import-jekyll-posts.ts",
     "replace-default-images": "ts-node --project scripts/tsconfig.json scripts/replace-default-images.ts",
@@ -18,8 +19,9 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@types/mdx": "^2.0.13",
-    "gray-matter": "^4.0.3",
+    "fuse.js": "^7.1.0",
     "globby": "^14.0.0",
+    "gray-matter": "^4.0.3",
     "next": "15.4.6",
     "next-mdx-remote": "^5.0.0",
     "react": "19.1.0",
@@ -41,8 +43,8 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/turndown": "^5.0.4",
     "@types/react-dom": "^19",
+    "@types/turndown": "^5.0.4",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9",
@@ -52,6 +54,7 @@
     "storybook": "^9.1.2",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5",
     "vitest": "^3.2.4"
   }
