Add script to find empty markdown links in content
  - Create find-empty-links.ts script to scan all MDX/MD files
  - Detect various empty link patterns: [text](), [text](""), [](), etc.
  - Provide detailed reporting with line numbers and context
  - Add npm script command for easy execution
  - Include comprehensive documentation in README.md
  - Help maintain content quality by identifying broken link references

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "generate-search-index": "node --import tsx/esm scripts/generate-search-index.ts",
     "create-post": "node --import tsx/esm scripts/create-post.ts",
     "replace-default-images": "node --import tsx/esm scripts/replace-default-images.ts",
-    "download-external-images": "node --import tsx/esm scripts/download-external-images.ts"
+    "download-external-images": "node --import tsx/esm scripts/download-external-images.ts",
+    "find-empty-links": "node --import tsx/esm scripts/find-empty-links.ts"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
