--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "replace-default-images": "node --import tsx/esm scripts/replace-default-images.ts",
     "download-external-images": "node --import tsx/esm scripts/download-external-images.ts",
     "find-empty-links": "node --import tsx/esm scripts/find-empty-links.ts",
-    "generate-rss": "ts-node scripts/generate-rss.ts"
+    "generate-rss": "node --import tsx/esm scripts/generate-rss.ts"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
