More pipeline fixes for vitetest.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "optionalrule-blog",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "npm run generate-search-index && npm run generate-rss && next build",
@@ -11,9 +12,9 @@
     "test:watch": "vitest --config vitest.unit.config.ts",
     "test:ui": "vitest --ui --config vitest.unit.config.ts",
     "test:coverage": "vitest run --coverage --config vitest.unit.config.ts",
-    "test:integration": "vitest run --config vitest.unit.config.ts src/__tests__/integration.test.ts",
-    "test:ssg": "vitest run --config vitest.unit.config.ts src/__tests__/ssg.test.ts",
-    "test:a11y": "vitest run --config vitest.unit.config.ts src/__tests__/accessibility.test.tsx",
+    "test:integration": "vitest run --config vitest.unit.config.ts --run src/__tests__/integration.test.ts",
+    "test:ssg": "vitest run --config vitest.unit.config.ts --run src/__tests__/ssg.test.ts",
+    "test:a11y": "vitest run --config vitest.unit.config.ts --run src/__tests__/accessibility.test.tsx",
     "test:build": "npm run build && npm run test:static",
     "test:static": "node -e \"console.log('Build verification: Static files generated successfully')\"",
     "test:all": "npm run test && npm run test:a11y && npm run test:build",
