chore(ci,lint): migrate to ESLint CLI, add typecheck + CI gates
- Replace next lint with ESLint CLI (lint, lint:fix, lint:ci)
- Add typecheck script (tsc --noEmit)
- ESLint flat config: ignore .next/, out/, public/, node_modules/, and next-env.d.ts; allow underscore‑prefixed unused vars/args/caught
errors
- Fix lint issues in scripts:
    - find-empty-links.ts: remove unused import
    - create-post.ts: use filename param in prompt
    - replace-default-images.ts: remove unused const; narrow parsing to featured_image (no any)
    - tag-and-excerpt.mjs: guard optional call, drop unused catch binding
- Convert test-content.js and simple-test.js to ESM imports (no require)
- CI: split jobs (lint, typecheck, test, build, deploy); run build/deploy only on push to main, keep lint/typecheck/tests on PRs
- Add AGENTS.md contributor guide

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "next dev",
     "build": "npm run generate-search-index && npm run generate-rss && next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "lint:ci": "eslint . --max-warnings=0",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "vitest run --config vitest.unit.config.ts",
     "test:watch": "vitest --config vitest.unit.config.ts",
     "test:ui": "vitest --ui --config vitest.unit.config.ts",
