--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "gray-matter": "^4.0.3",
     "next": "^15.5.2",
     "next-mdx-remote": "^5.0.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "reading-time": "^1.5.0",
     "rehype-highlight": "^7.0.2",
     "remark": "^15.0.1",
@@ -59,17 +59,17 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
-    "@types/node": "^20",
+    "@types/node": "^24.3.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/turndown": "^5.0.4",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9",
-    "eslint-config-next": "15.4.6",
+    "eslint-config-next": "^15.5.2",
     "eslint-plugin-storybook": "^9.1.2",
-    "happy-dom": "^15.11.6",
-    "jest-axe": "^9.0.0",
+    "happy-dom": "^18.0.1",
+    "jest-axe": "^10.0.0",
     "playwright": "^1.54.2",
     "storybook": "^9.1.2",
     "tailwindcss": "^4",
