--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "build": "npm run generate-search-index && npm run generate-rss && next build",
     "start": "next start",
+    "verify-titles": "node scripts/verify-titles.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:ci": "eslint . --max-warnings=0",
