--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,6 +59,8 @@ jobs:
           cache: npm
       - name: Install dependencies
         run: npm ci
+      - name: Validate configuration
+        run: npm run validate-config
       - name: Run tests with coverage
         run: npm run test:coverage
       - name: Run integration tests
@@ -85,6 +87,8 @@ jobs:
         uses: actions/configure-pages@v4
       - name: Install dependencies
         run: npm ci
+      - name: Validate configuration
+        run: npm run validate-config
       - name: Audit dependencies
         run: npm audit --production
         continue-on-error: true
