--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "replace-default-images": "node --import tsx/esm scripts/replace-default-images.ts",
     "download-external-images": "node --import tsx/esm scripts/download-external-images.ts",
     "find-empty-links": "node --import tsx/esm scripts/find-empty-links.ts",
-    "generate-rss": "node --import tsx/esm scripts/generate-rss.ts"
+    "generate-rss": "node --import tsx/esm scripts/generate-rss.ts",
+    "validate-config": "node --import tsx/esm scripts/validate-config.ts"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
