--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "fuse.js": "^7.1.0",
     "globby": "^14.0.0",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.544.0",
     "next": "^15.5.2",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.1.1",
