--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # other
-tmp_local/*
+tmp_local/
 
 # dependencies
 /node_modules
