--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/mdx": "^2.0.13",
     "fuse.js": "^7.1.0",
     "globby": "^15.0.0",
